--- a/src/estilos/estilologuin.css
+++ b/src/estilos/estilologuin.css
@@ -1,12 +1,33 @@
 .estilologuin{
-    width: 30%;
+    position: relative;
+    width: 40%;
     min-height: 100%;
-    background-color: #ffc107;
-    margin-left: 60%;
-    margin-top: 17%;
+    background-color: #000000;
+    margin-left: 30%;
+    margin-right:30% ;
+    margin-top: 20%;
     margin-bottom:5%;
-    box-shadow: 7px 13px 37px #ffc107;
+    box-shadow: 7px 13px 37px #393939;
     padding: 20px 30px;
-    border-top: 2px solid #ffffff;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    
+}
+@media screen and (max-width: 480px){
+    .estilologuin{
+        width: 70%;
+    }}
+
+.estilologuin::before{
+content: "";
+z-index: -1;
+position: absolute;
+width: 750px;
+height: 1000px;
+background: url(https://ih1.redbubble.net/image.981573850.2543/flat,750x,075,f-pad,750x1000,f8f8f8.jpg);
+top:-260px;
+left:-500px;
+}
+.tittle_loguin{
+    display:flex;
+    text-align: center;
 }
