--- a/src/estilos/estilologuin.css
+++ b/src/estilos/estilologuin.css
@@ -15,6 +15,8 @@
 @media screen and (max-width: 480px){
     .estilologuin{
         width: 70%;
+        margin-left: 10%;
+    margin-right:10% ;
     }}
 
 .estilologuin::before{
