--- a/src/estilos/estiloregistro.css
+++ b/src/estilos/estiloregistro.css
@@ -2,13 +2,15 @@
     position: relative;
     width: 40%;
     min-height: 100%;
-    background-color: #e0e0df;
+    background-color: #000000;
+    color: white;
     margin-left: 30%;
     margin-right:30% ;
     margin-top: 5%;
     margin-bottom:5%;
     box-shadow: 7px 13px 37px #393939;
     padding: 20px 30px;
+    border-radius: 20%;
     
 }
 @media screen and (max-width: 480px){
@@ -30,6 +32,7 @@
     margin-bottom:5%;
     box-shadow: 7px 13px 37px #393939;
     padding: 20px 30px;
+    border-radius: 5%;
 }
 .container{
     display: flex;
