--- a/src/estilos/estudiantes.css
+++ b/src/estilos/estudiantes.css
@@ -2,13 +2,15 @@
     position: relative;
     width: 60%;
     min-height: 100%;
-    background-color: #ffc107;
+    background-color: #000000;
+    color: white;
     margin-left: 10%;
     margin-right:10% ;
     margin-top: 40px; 
     margin-bottom:0%;
     box-shadow: 7px 13px 37px #393939;
     padding: 20px 30px;
+    border-radius: 5%;
 }
 .botonBack{
 
