--- a/src/estilos/examen.css
+++ b/src/estilos/examen.css
@@ -2,14 +2,13 @@
     position: relative;
     width: 60%;
     min-height: 100%;
-    background-color: #ffc107;
+    background-color: #000000;
+    color: white;
     margin-left: 10%;
     margin-right:10% ;
     margin-bottom: 3%;
     margin-top: 1%;
-
-    
-    
+    border-radius: 5%;
     box-shadow: 7px 13px 37px #393939;
     padding: 20px 30px;
     
