--- a/src/estilos/medallas.css
+++ b/src/estilos/medallas.css
@@ -8,17 +8,43 @@
     margin-bottom:5%;
     box-shadow: 7px 13px 37px #393939;
     padding: 20px 30px;
+    
 }
 .estilodocentedos{
     display: block;
     width: 40%;
     height: 10%;
  margin-top: 5%;
+ margin-left: 30%;
+ border-radius: 0%;
+ padding: 10px 10px;
+    background-color: #000000;
+    color: white;
     
    
     
  
 }
+
+@media  screen and (max-width: 480px){
+    .estilodocentedos{
+    display: block;
+    width: 50%;
+    height: 10%;
+    margin-left: 0%;
+    margin-top: 5%;
+    border-radius: 0%;
+    padding: 5px 5px;
+    background-color: #000000;
+    color: white;
+    
+   
+    
+ 
+}}
+
+
+
 .container{
     display: flex;
     
@@ -28,13 +54,15 @@
     height: 100px;
     width:100px;
     padding: 5px 5px;
+    padding: 10px 10px;
+    
 }
 .estilodocentetres{
     display: block;
     width: 100px;
     height: 100px;
+    padding: 10px 10px;
     
     
    
-    padding: 20px 30px;
 }
