--- a/src/estilos/medallas.css
+++ b/src/estilos/medallas.css
@@ -12,14 +12,15 @@
 }
 .estilodocentedos{
     display: block;
-    width: 40%;
+    width: 100%;
     height: 10%;
  margin-top: 5%;
- margin-left: 30%;
+ margin-left: 0%;
  border-radius: 0%;
  padding: 10px 10px;
-    background-color: #000000;
-    color: white;
+    background-color: #e9e9e9;
+    color: rgb(0, 0, 0);
+    border: 1px solid black;
     
    
     
@@ -29,14 +30,15 @@
 @media  screen and (max-width: 480px){
     .estilodocentedos{
     display: block;
-    width: 50%;
+    width: 100%;
     height: 10%;
     margin-left: 0%;
     margin-top: 5%;
     border-radius: 0%;
     padding: 5px 5px;
-    background-color: #000000;
-    color: white;
+    background-color: #e9e9e9;
+    color: rgb(0, 0, 0);
+    border: 1px solid;
     
    
     
@@ -47,6 +49,8 @@
 
 .container{
     display: flex;
+   
+    justify-content: center;
     
     
 }
@@ -55,14 +59,34 @@
     width:100px;
     padding: 5px 5px;
     padding: 10px 10px;
+
     
 }
 .estilodocentetres{
-    display: block;
+    display: flex;
+    justify-content: center;
     width: 100px;
-    height: 100px;
-    padding: 10px 10px;
+    height: 60px;
+    border: 1px solid black;
+background-color: #e9e9e9;
+    padding:10px 0px;
+    
+   
     
     
    
+}
+.estilopalmares{
+    margin-top: 5%;
+    margin-left: 4%;
+    display: block;
+   
+    text-justify: auto;
+    border-bottom: 1%;
+}
+.estilopalmares h6{
+    text-align: center;
+}
+.estiloinfo{
+    display: block;
 }
